# cylindrical-data-lvm

./: .gitignore  README.md  pyproject.toml  setup.py
experiment/: 01-download-data.ipynb  03-model.ipynb  all_action_params.ipynb  hmm-tests.ipynb
experiment/soccer/: 01-download-data.ipynb  all_action_params.ipynb  hmm-tests.ipynb
experiment/synthetic_data/: 01A_cyl_mix.ipynb  01_cylindrical_mixture.ipynb  01_hard_clustering.ipynb  02_cylindrical_mixture.ipynb  02_cylindrical_mixture_extensive.py  02_hierarchical_mixture.ipynb  03_hierarchical_mixture.ipynb  03_hierarchical_mixture_extensive.py  README.md  cylmix-2d-low-strong.ipynb  experiment_helper.py
experiment/synthetic_data/helpers/: __init__.py  alignment.py  builders.py  common.py  plots.py
notebooks/: TwoLayerHMM_test.ipynb  data_preparation.ipynb  full_data_test_two_layer_hmm.ipynb  hmm_test.ipynb
src/cyl_lvm/: __init__.py
src/cyl_lvm/clustering/: __init__.py  cylindrical_kmeans.py  spherical_kmeans.py
src/cyl_lvm/core/: __init__.py  constant.py  types.py
src/cyl_lvm/distributions/: __init__.py  abstract_cylindrical.py  base.py  cylindrical.py
src/cyl_lvm/hierarchical/: __init__.py  isolated.py  soccer_two_layer.py  two_layer.py
src/cyl_lvm/hmm/: __init__.py  base.py  emissions.py  gaussian_hmm.py  hmm_two_layer.py  soccer_emission.py  soccer_emission_2.py  two_layer_emission_io.py
src/cyl_lvm/metrics/: __init__.py  calibration.py  clustering.py  model_selection.py
src/cyl_lvm/mixtures/: em.py  initialization.py  mixture.py
src/soccer_pattern_recognition/: __init__.py
(+37 files in other folders)
